# VehicleDetector

./: CMakeLists.txt  README.md
data/: cascade.xml
src/: CarDetector.cpp  CarDetector.h  VehicleDetector.h  main.cpp
